Check certificate issuer in trusted_issuers.keystore - part 1